# Big-Data-Analysis_Assignment_1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  benchmark.py  benchmark_graph_hotfix.py  cli.py  config.py  detect.py  geo.py  loiter.py  models.py  parsing.py  partition.py  pipeline.py  pyproject.toml  requirements.txt  run_metadata.json  run_metadata_sequential.json  scoring.py  visualize.py
analysis/: cloning_events.csv  draft_events.csv  gap_events.csv  loiter_candidates.csv  top5_map.html  top5_vessels.csv  vessel_scores.csv
benchmark_results/: chunk_results.json  meta_chunk10000.json  meta_chunk100000.json  meta_chunk50000.json  meta_w1.json  meta_w15.json  meta_w2.json  meta_w4.json  meta_w8.json  speedup_results.json
loitering/: loitering_aggregates.csv  loitering_events.csv
presentation/: presentation_1st.tex
tests/: test_shadow_fleet.py
