[project]
name = "bda"
version = "0.1.0"
requires-python = ">=3.13.13"
dependencies = [
    "branca==0.8.2",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "folium==0.20.0",
    "fonttools==4.62.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "memory-profiler==0.61.0",
    "numpy==2.4.4",
    "packaging==26.0",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "requests==2.33.1",
    "six==1.17.0",
    "urllib3==2.6.3",
    "xyzservices==2026.3.0",
]
